modules/shared/components/QRCard/styles.module.css
.qrWrapper {
  position: relative;

  aspect-ratio: 1;
  object-fit: contain;

  border-radius: 10px;

  overflow: hidden;
}

.cardBody {
  margin: 0;

  margin-block-start: 24px;
}

.title,
.copy {
  margin: 0;
  text-align: center;
}

.title {
  font-size: 1.375rem;
  color: var(--darkBlue);

  margin-block-end: 16px;
}

.copy {
  font-size: 0.9375rem;
  color: var(--grayishBlue);


  padding-inline: 16px;
}

